--- a/src/app/pages/location/location.component.scss
+++ b/src/app/pages/location/location.component.scss
@@ -549,6 +549,42 @@
   }
 }
 
+// Input validation styles
+.form-input,
+.edit-input {
+  &.invalid {
+    border-color: #dc3545;
+    background-color: #fff5f5;
+    
+    &:focus {
+      border-color: #dc3545;
+      box-shadow: 0 0 0 1px rgba(220, 53, 69, 0.1);
+    }
+  }
+  
+  &.valid {
+    border-color: #28a745;
+    
+    &:focus {
+      border-color: #28a745;
+      box-shadow: 0 0 0 1px rgba(40, 167, 69, 0.1);
+    }
+  }
+}
+
+.validation-message {
+  font-size: 10px;
+  margin-top: 4px;
+  
+  &.error {
+    color: #dc3545;
+  }
+  
+  &.success {
+    color: #28a745;
+  }
+}
+
 // Responsive adjustments
 @media (max-width: 768px) {
   .excel-actions .action-controls-horizontal {
